apps/base/nutritrace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-nutritrace
  labels:
    trust.cert-manager.io/inject-bundle: "true"
