apps/base/nutritrace/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nutritrace
  namespace: app-nutritrace
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nutritrace.cluster.arpa`)
      kind: Rule
      services:
        - name: nutritrace
          namespace: app-nutritrace
          port: http
  tls:
    secretName: traefik-tls
